<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="41dp"
        android:text="@string/title"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/poster_detail"
        android:layout_width="140dp"
        android:layout_height="230dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:text="@string/description" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <RadioButton android:id="@+id/seen_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seen_check"
            android:onClick="seenChecked"/>

        <RadioButton android:id="@+id/want_to_see_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_see_check"

            android:onClick="wantChecked"/>

        <RadioButton android:id="@+id/dont_like_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_like_check"

            android:onClick="dontLikeChecked"/>
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_button" />
</LinearLayout>
</ScrollView>


