<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/movie_list_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </RelativeLayout>
    <TextView
        android:id="@+id/movie_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/movie_list_poster"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/title"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/movie_list_poster"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/poster"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/movie_list_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_toRightOf="@+id/movie_list_poster"
        android:layout_below="@+id/movie_list_title"
        android:textSize="9dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/description"
        android:maxLines="3" />

    <TextView
        android:id="@+id/movie_list_main_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/result_text_view"
        android:layout_below="@+id/movie_list_description"
        android:contentDescription="@string/mainCharacters"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_list_main_character"
        android:layout_toRightOf="@id/movie_list_poster"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/movie_list_poster"
        android:text="@string/has_seen"
        android:textSize="11dp" />


</RelativeLayout>